syntax = "proto3";
package svc.common;
option go_package = "microsvc/protocol/svc/commonpb";

import "google/protobuf/any.proto";
import "svc/commonpb/enum.proto";
import "validator.proto";

// 由客户端提供此结构体信息
message BaseExtReq {
  string app_name = 1; // e.g. com.xxx.app(移动应用) | pc.app | miniprogram.app
  string app_version = 2; // e.g. 1.0.0 后端会检验这个格式
  SignInPlatform platform = 3;
  SignInSystem system = 4;
  Lang language = 5; // 客户端语言
  //...
  map<string, string> extension = 10;
}

message BaseRes{
  int32 code = 1;
  string msg = 2;
}

message ConfigItem {
  ConfigItemCore core = 1;
  int64 created_by = 5; // 创建人UID
  int64 updated_by = 6; // 更新人UID
}
message ConfigItemCore{
  string key = 1; // 配置key，不含空格
  string name = 2; // 简短中文名称，备注用途
  string value = 3; // 配置值，如：json字符串、长文本等（开关类配置请使用【SwitchCenter】功能）
  bool is_lock = 4; // 是否隐藏配置值，用于敏感配置（true表示：新增后，cvalue在前端默认不可见，仅创建人可见&可改）
  bool allow_program_update = 5; // 允许被程序修改
}

message SwitchItem {
  SwitchItemCore core = 1;
  int64 created_by = 5; // 创建人UID
  int64 updated_by = 6; // 更新人UID
}
message SwitchItemCore {
  string key = 1;
  string name = 2; // 简短开关名称，备注用途
  SwitchValue value = 3; // 开关类型枚举，0关1开
  map<int32, string> value_ext = 4; // 开关值扩展，比如 2-a；3-b
  bool is_lock = 5; // 锁住后，仅创建人/管理员可改
}

message PageArgs{
  int32 pn = 1 [(validator.field).int32.gte = 1]; // page number
  int32 ps = 2 [(validator.field).int32.gte = 1]; // page size
  bool is_download = 3; // 前端导出数据时用，true时后端会放开ps上限（无导出功能时可不传）
  option (validator.message).cel = {
    id: "PageArgs.rule",
    message: "`ps` should be within the range of [1,50], unless the value of the field `is_download` is true",
    expression: "(this.ps >=1 && this.ps <=50) || (this.ps > 50 && this.is_download)",
  };
}

message CounterInt64 {
  int64 count = 1;
  int64 delta = 2;
}

enum OrderType {
  OT_Desc = 0; // 降序
  OT_Asc = 1; // 升序
}

// 通用排序结构
message Sort {
  string order_field = 1 [(validator.field).string.min_len = 1]; // 指定排序字段
  OrderType order_type = 2 [(validator.field).enum.defined_only = true]; // 指定排序方式
}

// YYYY-MM-DD HH:mm:ss 通常用于搜索
message TimeRange {
  string start_dt = 1 [(validator.field).string.pattern = "^$|^\\d{4}-\\d{2}-\\d{2} \\d{2}:\\d{2}:\\d{2}$"];
  string end_dt = 2 [(validator.field).string.pattern = "^$|^\\d{4}-\\d{2}-\\d{2} \\d{2}:\\d{2}:\\d{2}$"];
}

message TimeRangeArray{
  repeated string list = 1;
}

message EmptyRes{}


message UserCertify {
  bool is_realperson_certified = 7; // 是否真人认证（头像和人脸识别匹配）
  bool is_realname_certified = 8; // 是否实名认证（头像和身份证匹配）
}

message HTTPResp {
  int32 code = 1;
  string msg = 2;
  bool from_gateway = 3;
  google.protobuf.Any data = 4;
  repeated string passed_services = 5;
}

message FloatRange {
  float min = 1;
  float max = 2;
}

message Int32Range {
  int32 min = 1;
  int32 max = 2;
}

message Int64Range {
  int64 min = 1;
  int64 max = 2;
}

message Geometry {
  string lng = 1; // 经度
  string lat = 2; // 纬度
}